# voice-agent-core

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: .env.example  README.md  smoke_agent.py
src/voice_agent_core/: __init__.py  _version.py  config.py  deepgram.py  idle.py  llm.py  notify.py  observability.py  pipeline.py  providers.py  runtime.py  transcript.py
src/voice_agent_core/fish/: __init__.py  settings.py  stt.py  tts.py
src/voice_agent_core/inworld/: __init__.py  settings.py  tts.py
src/voice_agent_core/stt/: __init__.py  stream_adapter.py
tests/: conftest.py  test_config.py  test_fish.py  test_idle.py  test_llm.py  test_notify.py  test_observability.py  test_pipeline.py  test_providers.py  test_public_api.py  test_runtime.py  test_stream_adapter.py  test_transcript.py
