[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-agent-core"
version = "0.2.1"
description = "Shared infrastructure for Fish Audio voice agents: LiveKit integration, Fish Audio STT/TTS adapters, notifiers, observability"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { text = "MIT" }
authors = [{ name = "Fish Audio FDE" }]

dependencies = [
    "livekit-agents[deepgram,fishaudio,openai,silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-ai-coustics~=0.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_agent_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
